# megcpuminer

./: Makefile.am  README  cpu-miner.c  scrypt.c  sha2.c
